docs: document create user with swagger
